--- a/app/index.html
+++ b/app/index.html
@@ -14,58 +14,29 @@
     <link rel="stylesheet" href="styles/main.css" />
   </head>
   <body>
-    <section class="section-one">
+    <section class="general-ziro">
+      <div class="block-ziro">
+        <div class="block-one block">1</div>
+        <div class="block-two block">2</div>
+        <div class="block-three block">3</div>
+        <div class="block-four block">4</div>
+      </div>
+    </section>
+    <section class="general-one">
       <div class="container">
-        <div class="block-left">
-          hello
-        </div>
-        <div class="block-left class-red">
-          hello
-        </div>
-        <div class="block-one">
-          hello
-        </div>
-        <div class="block-one class-green">
-          hello
-        </div>
-        <div class="block-right">
-          <div class="card content-reverse">hello boys</div>
-        </div>
+        <div class="square-one">1</div>
+        <div class="circle">2</div>
+        <div class="square-two">3</div>
       </div>
     </section>
-    <section class="section-three">
-      <div class="block-one">
-        hello
-      </div>
-      <div class="block-one class-green">
-        hello
-      </div>
-      <div class="block-two">
-        hello
-      </div>
-      <div class="block-two class-yellow">
-        hello
-      </div>
-      <div class="block-three">
-        hello
-      </div>
-      <div class="block-three class-blue">
-        hello
-      </div>
-    </section>
-    
-    <section class="section-two">
-      <div class="container content-reverse">
-        <div class="block-left">
-          hello
-        </div>
-        <div class="block-right">
-          <div class="card" id="main-card">hello world</div>
+    <section class="two-square">
+      <div class="left-square">
+        <div class="center">
+          Я белый квадрат и меня рисовал не Малевич !
         </div>
       </div>
+      <div class="rigth-square"></div>
     </section>
-    
-
     <!-- build:js scripts/main.js -->
     <script src="scripts/main.js"></script>
     <!-- endbuild -->
