--- a/app/index.html
+++ b/app/index.html
@@ -24,18 +24,18 @@
     </section>
     <section class="general-one">
       <div class="container">
-        <div class="square-one">1</div>
-        <div class="circle">2</div>
-        <div class="square-two">3</div>
+        <div class="square-one form">1</div>
+        <div class="circle form">2</div>
+        <div class="square-two form">3</div>
       </div>
     </section>
     <section class="two-square">
-      <div class="left-square">
+      <div class="left-square square">
         <div class="center">
           Я белый квадрат и меня рисовал не Малевич !
         </div>
       </div>
-      <div class="rigth-square"></div>
+      <div class="rigth-square square"></div>
     </section>
     <!-- build:js scripts/main.js -->
     <script src="scripts/main.js"></script>
