--- a/app/index.html
+++ b/app/index.html
@@ -14,28 +14,11 @@
     <link rel="stylesheet" href="styles/main.css" />
   </head>
   <body>
-    <section class="general-ziro">
-      <div class="block-ziro">
-        <div class="block-one block">1</div>
-        <div class="block-two block">2</div>
-        <div class="block-three block">3</div>
-        <div class="block-four block">4</div>
+    <section class="section-one">
+      <div class="block-ziro"></div>
+      <div class="block-one">
+        <div class="block-two"></div>
       </div>
-    </section>
-    <section class="general-one">
-      <div class="container">
-        <div class="square-one">1</div>
-        <div class="circle">2</div>
-        <div class="square-two">3</div>
-      </div>
-    </section>
-    <section class="two-square">
-      <div class="left-square">
-        <div class="center">
-          Я белый квадрат и меня рисовал не Малевич !
-        </div>
-      </div>
-      <div class="rigth-square"></div>
     </section>
     <!-- build:js scripts/main.js -->
     <script src="scripts/main.js"></script>
