--- a/app/index.html
+++ b/app/index.html
@@ -15,27 +15,31 @@
   </head>
   <body>
     <section class="general-ziro">
-      <div class="block-ziro">
-        <div class="block-one block">1</div>
-        <div class="block-two block">2</div>
-        <div class="block-three block">3</div>
-        <div class="block-four block">4</div>
+      <div class="container">
+        <div class="block-ziro">
+          <div class="block-one block">1</div>
+          <div class="block-two block">2</div>
+          <div class="block-three block">3</div>
+          <div class="block-four block">4</div>
+        </div>
       </div>
     </section>
     <section class="general-one">
-      <div class="container">
-        <div class="square-one form">1</div>
-        <div class="circle form">2</div>
-        <div class="square-two form">3</div>
-      </div>
+      <div class="square-one form">1</div>
+      <div class="circle form">2</div>
+      <div class="square-two form">3</div>
     </section>
-    <section class="two-square">
-      <div class="left-square square">
-        <div class="center">
-          Я белый квадрат и меня рисовал не Малевич !
+    <section class="section-three">
+      <div class="container-one">
+        <div class="two-square">
+          <div class="left-square square">
+            <div class="center">
+              Я белый квадрат и меня рисовал не Малевич !
+            </div>
+          </div>
+          <div class="rigth-square square"></div>
         </div>
       </div>
-      <div class="rigth-square square"></div>
     </section>
     <!-- build:js scripts/main.js -->
     <script src="scripts/main.js"></script>
