--- a/app/index.html
+++ b/app/index.html
@@ -15,10 +15,29 @@
   </head>
   <body>
     <section class="section-one">
-      <div class="block-ziro"></div>
+      <div class="block">
+        <div class="block-ziro"></div>
       <div class="block-one">
-        <div class="block-two"></div>
+        <div class="block-two">HELLO WORLD</div>
       </div>
+      </div>
+    </section>
+    <section class="section-two">
+      <div class="planet">
+        <div class="planet-one tic">
+          <div class="tic-one plan"></div>
+        </div>
+        <div class="planet-two tic">
+          <div class="tic-two plan"></div>
+        </div>
+        <div class="planet-three tic">
+          <div class="tic-three plan"></div>
+        </div>
+      </div>
+    </section>
+    <section class="section-three">
+      <div class="forest jop"></div>
+      <div class="sunset jop"></div>
     </section>
     <!-- build:js scripts/main.js -->
     <script src="scripts/main.js"></script>
