--- a/app/index.html
+++ b/app/index.html
@@ -12,26 +12,28 @@
     <link rel="apple-touch-icon" href="apple-touch-icon.png" />
 
     <link rel="stylesheet" href="styles/main.css" />
+    <link href="https://fonts.googleapis.com/css?family=Roboto&display=swap" rel="stylesheet">
+
   </head>
   <body>
     <section class="section-one">
       <div class="block">
         <div class="block-ziro"></div>
-      <div class="block-one">
-        <div class="block-two">HELLO WORLD</div>
-      </div>
+        <div class="block-one">
+          <div class="block-two">HELLO WORLD</div>
+        </div>
       </div>
     </section>
     <section class="section-two">
-      <div class="planet">
-        <div class="planet-one tic">
-          <div class="tic-one plan"></div>
+      <div class="planets">
+        <div class="planet planet-one">
+          <img src="./images/mars.jpg" alt="" />
         </div>
-        <div class="planet-two tic">
-          <div class="tic-two plan"></div>
+        <div class="planet planet-two">
+          <img src="./images/mars.png" alt="" />
         </div>
-        <div class="planet-three tic">
-          <div class="tic-three plan"></div>
+        <div class="planet">
+          <img src="./images/mars.svg" alt="" />
         </div>
       </div>
     </section>
@@ -39,6 +41,7 @@
       <div class="forest jop"></div>
       <div class="sunset jop"></div>
     </section>
+    
     <!-- build:js scripts/main.js -->
     <script src="scripts/main.js"></script>
     <!-- endbuild -->
