--- a/app/index.html
+++ b/app/index.html
@@ -12,8 +12,10 @@
     <link rel="apple-touch-icon" href="apple-touch-icon.png" />
 
     <link rel="stylesheet" href="styles/main.css" />
-    <link href="https://fonts.googleapis.com/css?family=Roboto&display=swap" rel="stylesheet">
-
+    <link
+      href="https://fonts.googleapis.com/css?family=Roboto&display=swap"
+      rel="stylesheet"
+    />
   </head>
   <body>
     <section class="section-one">
@@ -27,13 +29,13 @@
     <section class="section-two">
       <div class="planets">
         <div class="planet planet-one">
-          <img src="./images/mars.jpg" alt="" />
+          <img src="./images/mars.svg" alt="" />
         </div>
         <div class="planet planet-two">
-          <img src="./images/mars.png" alt="" />
+          <img src="./images/Vector.svg" alt="" />
         </div>
-        <div class="planet">
-          <img src="./images/mars.svg" alt="" />
+        <div class="planet planet-three">
+          <img src="./images/jupiters.svg" alt="" />
         </div>
       </div>
     </section>
@@ -41,7 +43,7 @@
       <div class="forest jop"></div>
       <div class="sunset jop"></div>
     </section>
-    
+
     <!-- build:js scripts/main.js -->
     <script src="scripts/main.js"></script>
     <!-- endbuild -->
