--- a/app/index.html
+++ b/app/index.html
@@ -40,8 +40,8 @@
       </div>
     </section>
     <section class="section-three">
-      <div class="forest jop"></div>
-      <div class="sunset jop"></div>
+      <div class="forest jop"><div class="forestry">FOREST</div></div>
+      <div class="sunset jop"><div class="desert">DESERT</div></div>
     </section>
 
     <!-- build:js scripts/main.js -->
