--- a/app/index.html
+++ b/app/index.html
@@ -18,33 +18,7 @@
     />
   </head>
   <body>
-    <section class="section-one">
-      <div class="block">
-        <div class="block-ziro"></div>
-        <div class="block-one">
-          <div class="block-two">HELLO WORLD</div>
-        </div>
-      </div>
-    </section>
-    <section class="section-two">
-      <div class="planets">
-        <div class="planet planet-one">
-          <img src="./images/mars.svg" alt="" />
-        </div>
-        <div class="planet planet-two">
-          <img src="./images/Vector.svg" alt="" />
-        </div>
-        <div class="planet planet-three">
-          <img src="./images/jupiters.svg" alt="" />
-        </div>
-      </div>
-    </section>
-    <section class="section-three">
-      <div class="forest jop"><div class="forestry">FOREST</div></div>
-      <div class="sunset jop"><div class="desert">DESERT</div></div>
-    </section>
-      
-
+    HELLO WORLD
     <!-- build:js scripts/main.js -->
     <script src="scripts/main.js"></script>
     <!-- endbuild -->
