--- a/app/index.html
+++ b/app/index.html
@@ -28,7 +28,7 @@
   <body>
     
     <header>
-      <img class="logo" src="_images/logo.svg" alt="logo">
+      <img class="logo" src="images/logo.svg" alt="logo">
       <nav>
           <ul class="nav__links">
               <li><a href="#">Services</a></li>
