--- a/app/index.html
+++ b/app/index.html
@@ -19,10 +19,13 @@
   </head>
   <body>
     <section class="section-one">
-      <div class="block">
-        <div class="block-ziro"></div>
-        <div class="block-one">
-          <div class="block-two">HELLO WORLD</div>
+      <!--      Контейнер!!!!!!!!!!!!!-->
+      <div class="container">
+        <div class="block">
+          <div class="block-ziro"></div>
+          <div class="block-one">
+            <div class="block-two">HELLO WORLD</div>
+          </div>
         </div>
       </div>
     </section>
@@ -40,8 +43,13 @@
       </div>
     </section>
     <section class="section-three">
-      <div class="forest jop"><div class="forestry">FOREST</div></div>
-      <div class="sunset jop"><div class="desert">DESERT</div></div>
+      <!--      Контейнер!!!!!!!!!!!!!-->
+      <div class="container">
+        <div class="nature">
+          <div class="forest jop"><div class="forestry">FOREST</div></div>
+          <div class="sunset jop"><div class="desert">DESERT</div></div>
+        </div>
+      </div>
     </section>
 
     <!-- build:js scripts/main.js -->
