--- a/app/index.html
+++ b/app/index.html
@@ -113,6 +113,17 @@
         </div>
       </div>
     </section>
+    <br>
+    <section class="boot">
+      <div class="container">
+        <div class="row">
+          <div class="col-6"><div class="test"></div></div>
+          <div class="col-6">
+            
+            <div class="test"></div></div>
+        </div>
+      </div>
+    </section>
 
     <!-- build:js scripts/main.js -->
     <script
