--- a/app/index.html
+++ b/app/index.html
@@ -22,8 +22,8 @@
       <!--      Контейнер!!!!!!!!!!!!!-->
       <div class="container">
         <div class="block">
-          <div class="block-ziro"></div>
-          <div class="block-one">
+          <div class="block-ziro one"></div>
+          <div class="block-one one">
             <div class="block-two">HELLO WORLD</div>
           </div>
         </div>
