--- a/app/index.html
+++ b/app/index.html
@@ -119,8 +119,12 @@
         <div class="row">
           <div class="col-6"><div class="test"></div></div>
           <div class="col-6">
-            
-            <div class="test"></div></div>
+            <div class="row">
+              <div class="col-3"><div class="test"></div>                                                                                                                                                                                                                                                                                                                                                                                             </div>
+              <div class="col-3"><div class="test"></div>                                                                                                                                                                                                                                                                                                                                                                                             </div>
+            </div>
+            <div class="test"></div>
+          </div>
         </div>
       </div>
     </section>
