--- a/app/index.html
+++ b/app/index.html
@@ -32,7 +32,7 @@
     />
   </head>
   <body>
-    <header>
+    <!-- <header>
       <div class="container">
         <div class="row">
           <div class="col-3">
@@ -53,9 +53,9 @@
           </div>
         </div>
       </div>
-    </header>
+    </header> -->
 
-    <section class="boot">
+    <!-- <section class="boot">
       <div class="container">
 
         <div class="row">
@@ -112,18 +112,43 @@
           </div>
         </div>
       </div>
-    </section>
-    <br>
-    <section class="boot">
-      <div class="container">
+    </section> -->
+    <br />
+    <section class="boot-one">
+      <div class="container-fluid">
         <div class="row">
-          <div class="col-6"><div class="test"></div></div>
+          <div class="col-md-6">
+            <div class="test-one"></div>
+          </div>
+          <div class="col-md-6">
+            <div class="row">
+              <div class="col-md-6 col-3"><div class="test-one"></div></div>
+              <div class="col-md-6 col-3"><div class="test-one"></div></div>
+
+              <div class="col-md-6 col-3"><div class="test-one"></div></div>
+              <div class="col-md-6 col-3"><div class="test-one"></div></div>
+            </div>
+          </div>
+        </div>
+        <div class="row">
           <div class="col-6">
             <div class="row">
-              <div class="col-3"><div class="test"></div>                                                                                                                                                                                                                                                                                                                                                                                             </div>
-              <div class="col-3"><div class="test"></div>                                                                                                                                                                                                                                                                                                                                                                                             </div>
+              <div class="col-md-6 col-sm-5 col-3"><div class="test-one"></div></div>
+              <div class="col-md-6 col-sm-7 col-3"><div class="test-one"></div></div>
+              <div class="col-md-6 col-sm-7 col-3"><div class="test-one"></div></div>
+              <div class="col-md-6 col-sm-5 col-3"><div class="test-one"></div></div>
             </div>
-            <div class="test"></div>
+          </div>
+          <div class="col-6"><div class="test-one"></div></div>
+        </div>
+      </div>
+    </section>
+    <br>
+    <section class="cap">
+      <div class="container">
+        <div class="row">
+          <div class="col-11">
+            <div class="test-one"></div>
           </div>
         </div>
       </div>
