test 1 is ready

--- a/app/index.html
+++ b/app/index.html
@@ -1,3 +1,5 @@
+<!-- !!!!!!!!!!!!!!!!!!!! В этом файле изменения не вностить !!!!!!!!!!!!!!!!!!!!-->
+
 <!DOCTYPE html>
 <html lang="">
   <head>
@@ -8,39 +10,23 @@
       name="viewport"
       content="width=device-width, initial-scale=1, shrink-to-fit=no"
     />
-    <title>unit two</title>
+    <title>Super hot</title>
     <link rel="apple-touch-icon" href="apple-touch-icon.png" />
-
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
     <link rel="stylesheet" href="styles/main.css" />
   </head>
+
   <body>
-    <section class="general-ziro">
-      <div class="container">
-        <div class="block-ziro">
-          <div class="block-one block">1</div>
-          <div class="block-two block">2</div>
-          <div class="block-three block">3</div>
-          <div class="block-four block">4</div>
-        </div>
+    <div class="container">
+      <div class="main-navigation-wrp">
+        <img src="./img/tony.png" class="logo">
+        <ul class="main-navigation">
+          <li><a href="./test1.html">Position test</a></li>
+          <li><a href="./test1.html">Разрабатывается....</a></li>
+          <li><a href="./test1.html">Разрабатывается....</a></li>
+        </ul>
       </div>
-    </section>
-    <section class="general-one">
-      <div class="square-one form">1</div>
-      <div class="circle form">2</div>
-      <div class="square-two form">3</div>
-    </section>
-    <section class="section-three">
-      <div class="container-one">
-        <div class="two-square">
-          <div class="left-square square">
-            <div class="center">
-              Я белый квадрат и меня рисовал не Малевич !
-            </div>
-          </div>
-          <div class="rigth-square square"></div>
-        </div>
-      </div>
-    </section>
+    </div>
     <!-- build:js scripts/main.js -->
     <script src="scripts/main.js"></script>
     <!-- endbuild -->
