--- a/app/index.html
+++ b/app/index.html
@@ -21,8 +21,8 @@
       <div class="main-navigation-wrp">
         <img src="./img/tony.png" class="logo">
         <ul class="main-navigation">
-          <li><a href="./test1.html">Position test</a></li>
-          <li><a href="./test1.html">Разрабатывается....</a></li>
+          <li><a href="./test1.html">1. Position test</a></li>
+          <li><a href="./test2.html">2. Button test</a></li>
           <li><a href="./test1.html">Разрабатывается....</a></li>
         </ul>
       </div>
