--- a/app/test2.html
+++ b/app/test2.html
@@ -1,15 +1,96 @@
-<!doctype html>
+<!DOCTYPE html>
 <html lang="en">
-<head>
-  <meta charset="UTF-8">
-  <meta name="viewport"
-        content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
-  <meta http-equiv="X-UA-Compatible" content="ie=edge">
-  <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
+  <head>
+    <meta charset="UTF-8" />
+    <meta
+      name="viewport"
+      content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0"
+    />
+    <meta http-equiv="X-UA-Compatible" content="ie=edge" />
+    <title>Document</title>
 
-  <title>Document</title>
-</head>
-<body>
+    <link
+      rel="stylesheet"
+      href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css"
+      integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm"
+      crossorigin="anonymous"
+    />
+    <link rel="stylesheet" href="styles/main.css" />
+    <link rel="stylesheet" href="styles/test2.css" />
+  </head>
+  <body>
+    <div class="container">
+      <div class="row">
+        <div class="col-12">
+          <div class="task-description">
+            <h3>Кнопки!!!!!</h3>
+            <ol>
+              <li>Слева результат, справа то что ожидается</li>
+              <li>Все изменения вносятся только в файл <u>test2.scss</u></li>
+              <li>HTMl МОЖНО трогать но <b>классы</b> добавлять нельзя</li>
+              <li>Использовать только те классы которые уже прописаны</li>
+              <li>Вся анимация должна быть плавная. Используй transition</li>
+              <li>
+                Стили каждого уровня должны быть независимыми (не влиять друг на
+                друга)
+              </li>
+            </ol>
+          </div>
+        </div>
+      </div>
 
-</body>
+      <div class="row">
+        <div class="col"><h2>Lvl1</h2></div>
+      </div>
+      <div class="row">
+        <div class="col-6"><h4>Песочница</h4></div>
+        <div class="col-6"><h4>Что должно получиться</h4></div>
+      </div>
+      <div class="row">
+        <div class="col-6">
+          <div class="task-item">
+            <div class="task-wrp task-1">
+              <button class="primary-button">Success</button>
+            </div>
+          </div>
+        </div>
+        <div class="col-6">
+          <div class="">
+            <h5>Обычное состояние</h5>
+            <img src="./img/test2-1.png" alt="" />
+            <h5>При наведении</h5>
+            <img src="./img/test2-2.png" alt="" />
+          </div>
+        </div>
+      </div>
+      <hr />
+
+      <div class="row">
+        <div class="col"><h2>Lvl2</h2></div>
+      </div>
+      <div class="row">
+        <div class="col-6"><h4>Песочница</h4></div>
+        <div class="col-6"><h4>Что должно получиться</h4></div>
+      </div>
+      <div class="row">
+        <div class="col-6">
+          <div class="task-item">
+            <div class="task-wrp task-2">
+              <!--          писать тут -->
+
+              <button class="primary-button">Success</button>
+            </div>
+          </div>
+        </div>
+        <div class="col-6">
+          <div class="">
+            <h5>Обычное состояние</h5>
+            <img src="" alt="" />
+            <h5>При наведении</h5>
+            <img src="" alt="" />
+          </div>
+        </div>
+      </div>
+    </div>
+  </body>
 </html>
