buttons task is finished

--- a/app/test2.html
+++ b/app/test2.html
@@ -15,6 +15,14 @@
       integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm"
       crossorigin="anonymous"
     />
+
+    <!--  fontawesome подключать тут  -->
+    <!--    <link-->
+    <!--      rel="stylesheet"-->
+    <!--      href=""-->
+    <!--    />-->
+    <!--   //////////////////////// -->
+
     <link rel="stylesheet" href="styles/main.css" />
     <link rel="stylesheet" href="styles/test2.css" />
   </head>
@@ -76,18 +84,50 @@
         <div class="col-6">
           <div class="task-item">
             <div class="task-wrp task-2">
-              <!--          писать тут -->
-
-              <button class="primary-button">Success</button>
+              <!--  подключить бутстрап и вставить эту иконку https://fontawesome.com/icons/angellist?style=brands-->
+              <button class="secondary-button">
+                Secondary
+                <i class="fab fa-angellist"></i>
+                <!-- тут должна быть иконка -->
+              </button>
             </div>
           </div>
         </div>
         <div class="col-6">
           <div class="">
             <h5>Обычное состояние</h5>
-            <img src="" alt="" />
+            <img src="./img/test2-3.png" alt="" />
             <h5>При наведении</h5>
-            <img src="" alt="" />
+            <img src="./img/test2-4.png" alt="" />
+          </div>
+        </div>
+      </div>
+
+      <div class="row">
+        <div class="col"><h2>Lvl3</h2></div>
+      </div>
+      <div class="row">
+        <div class="col-6"><h4>Песочница</h4></div>
+        <div class="col-6"><h4>Что должно получиться</h4></div>
+      </div>
+      <div class="row">
+        <div class="col-6">
+          <div class="task-item">
+            <div class="task-wrp task-3">
+              <!--   fontawesome уже должен быть подключен -->
+              <button class="round-button">
+                <i class="fas fa-angle-double-down"></i>
+                <!-- тут должна быть иконка -->
+              </button>
+            </div>
+          </div>
+        </div>
+        <div class="col-6">
+          <div class="">
+            <h5>Обычное состояние</h5>
+            <img src="./img/test2-5.png" alt="" />
+            <h5>При наведении</h5>
+            <img src="./img/test2-6.png" alt="" />
           </div>
         </div>
       </div>
