new commit jedi

--- a/app/index.html
+++ b/app/index.html
@@ -34,7 +34,7 @@
         <div class="two-square">
           <div class="left-square square">
             <div class="center">
-              Я белый квадрат и меня рисовал не Малевич агаf!
+              Я белый квадрат и меня рисовал не Малевич !
             </div>
           </div>
           <div class="rigth-square square"></div>
