new commit jedi

--- a/app/index.html
+++ b/app/index.html
@@ -12,35 +12,18 @@
     <link rel="apple-touch-icon" href="apple-touch-icon.png" />
 
     <link rel="stylesheet" href="styles/main.css" />
+    <style>body {opacity: 0; overflow-x: hidden;} html {background-color: #1a1a1a;}</style>
   </head>
-  <body>
-    <section class="general-ziro">
-      <div class="container">
-        <div class="block-ziro">
-          <div class="block-one block">1</div>
-          <div class="block-two block">2</div>
-          <div class="block-three block">3</div>
-          <div class="block-four block">4</div>
-        </div>
+  <body class="ishome">
+    
+    <div class="my-page">
+      <div class="my-header">
+        <header class="site-header" style="background-image: url(../app/img/top-bg.jpg);"></header>
       </div>
-    </section>
-    <section class="general-one">
-      <div class="square-one form">1</div>
-      <div class="circle form">2</div>
-      <div class="square-two form">3</div>
-    </section>
-    <section class="section-three">
-      <div class="container-one">
-        <div class="two-square">
-          <div class="left-square square">
-            <div class="center">
-              Я белый квадрат и меня рисовал не Малевич !
-            </div>
-          </div>
-          <div class="rigth-square square"></div>
-        </div>
-      </div>
-    </section>
+    </div>
+
+
+
     <!-- build:js scripts/main.js -->
     <script src="scripts/main.js"></script>
     <!-- endbuild -->
