add mixing to the project;

--- a/app/index.html
+++ b/app/index.html
@@ -12,17 +12,30 @@
     <link rel="apple-touch-icon" href="apple-touch-icon.png" />
 
     <link rel="stylesheet" href="styles/main.css" />
-    <style>body {opacity: 0; overflow-x: hidden;} html {background-color: #1a1a1a;}</style>
+    <style>
+      body {
+        opacity: 0;
+        overflow-x: hidden;
+      }
+      html {
+        background-color: #1a1a1a;
+      }
+    </style>
   </head>
-  <body class="ishome">
-    
+  <body class="is-home">
     <div class="my-page">
       <div class="my-header">
-        <header class="site-header" style="background-image: url(../app/img/top-bg.jpg);"></header>
+        <header
+          class="site-header"
+          style="background-image: url(./img/top-bg.jpg);"
+        >
+          Lorem ipsum dolor sit amet, consectetur adipisicing elit. Amet
+          blanditiis culpa dolore esse fugit illum labore laboriosam magni nisi
+          numquam pariatur, repellendus, tenetur? Aliquam atque est hic,
+          praesentium quia temporibus.
+        </header>
       </div>
     </div>
-
-
 
     <!-- build:js scripts/main.js -->
     <script src="scripts/main.js"></script>
