--- a/app/index.html
+++ b/app/index.html
@@ -27,15 +27,16 @@
       <div class="my-header">
         <header
           class="site-header"
-          style="background-image: url(./img/top-bg.jpg);"
-        >
-          Lorem ipsum dolor sit amet, consectetur adipisicing elit. Amet
-          blanditiis culpa dolore esse fugit illum labore laboriosam magni nisi
-          numquam pariatur, repellendus, tenetur? Aliquam atque est hic,
-          praesentium quia temporibus.
+          style="background-image: url(./img/top-bg.jpg);">
+          
         </header>
       </div>
     </div>
+    <div class="boy">
+      you boy !
+    </div>
+
+    
 
     <!-- build:js scripts/main.js -->
     <script src="scripts/main.js"></script>
