--- a/app/index.html
+++ b/app/index.html
@@ -62,6 +62,71 @@
               </ul>
             </nav>
           </div>
+          <div class="header-flex">
+            <div class="flex-center">
+              <div class="container">
+                <div class="row">
+                  <div class="col-sm-7">
+                    <div class="header-composition">
+                      <div class="welcome">
+                        <p><span>Добро пожаловать в профессиональный</span></p>
+                        <h1 class="h1">Салон красоты</h1>
+                        <strong>
+                          <i class="fa fa-star"></i>в Москве<i
+                            class="fa fa-star"
+                          ></i>
+                        </strong>
+                      </div>
+
+                      <p>
+                        <strong>S&Mitler</strong> - это салон красоты
+                        бизнес-класса. Мастера салона дарят посетителям
+                        уверенность в себя и индивидуальный стиль. Здесь
+                        прелставлены все самые востребованные услуги
+                        бьюти-индустрии.
+                      </p>
+
+                      <a href="#" class="button">О салоне</a>
+                    </div>
+                  </div>
+                </div>
+              </div>
+            </div>
+          </div>
+
+          <div class="header-social">
+            <nav class="soc">
+              <ul>
+                <li>
+                  <a href="#"><i class="fa fa-facebook"></i></a>
+                </li>
+                <li>
+                  <a href="#"><i class="fa fa-instagram"></i></a>
+                </li>
+                <li>
+                  <a href="#"><i class="fa fa-vk"></i></a>
+                </li>
+              </ul>
+            </nav>
+          </div>
+
+          <div class="header-contacts">
+            <div class="container">
+              <div class="row">
+                <div class="col-md-4">
+                  <i class="fa fa-location-arrow"></i> г. Москва, ул. Ивана
+                  Бабушкина, 22с1
+                </div>
+                <div class="col-md-4">
+                  <i class="fa fa-mobile"></i> +7 (495) 922-77-73
+                </div>
+                <div class="col-md-4">
+                  <i class="fa fa-clock-o"></i> Время работы: ежедневно: 10:00 -
+                  22:00
+                </div>
+              </div>
+            </div>
+          </div>
         </header>
       </div>
       <div id="my-content"></div>
