--- a/app/index.html
+++ b/app/index.html
@@ -39,7 +39,7 @@
             <a href="#" class="logo">
               <img src="img/logo-1.svg" alt="Салон красоты Смитлер" />
             </a>
-            <div class="phone">
+            <div class="phone hidden-xs">
               <i class="fa fa-mobile"></i>+7 (495) 118-94-35
             </div>
             <a href="#my-menu" class="hamburger hamburger--emphatic">
@@ -66,7 +66,7 @@
             <div class="flex-center">
               <div class="container">
                 <div class="row">
-                  <div class="col-sm-7">
+                  <div class="col-sm-7 col-xs-10">
                     <div class="header-composition">
                       <div class="welcome">
                         <p><span>Добро пожаловать в профессиональный</span></p>
@@ -113,14 +113,16 @@
           <div class="header-contacts">
             <div class="container">
               <div class="row">
-                <div class="col-md-4">
+                <div class="col-md-4 col-sm-6">
                   <i class="fa fa-location-arrow"></i> г. Москва, ул. Ивана
                   Бабушкина, 22с1
                 </div>
-                <div class="col-md-4">
-                  <i class="fa fa-mobile"></i> +7 (495) 922-77-73
+                <div class="col-md-4 col-sm-6">
+                  <div class="phone-h">
+                    <i class="fa fa-mobile"></i> +7 (495) 922-77-73
+                  </div>
                 </div>
-                <div class="col-md-4">
+                <div class="col-md-4 hidden-sm hidden-xs">
                   <i class="fa fa-clock-o"></i> Время работы: ежедневно: 10:00 -
                   22:00
                 </div>
@@ -129,7 +131,108 @@
           </div>
         </header>
       </div>
-      <div id="my-content"></div>
+      <div id="my-content">
+        <section class="s-services">
+          <div class="owl-carousel carousel-services">
+            <!--  -->
+            <div class="carousel-services-item">
+              <div class="carousel-services-content">
+                <div class="carousel-services-composition">
+                  <div class="carousel-logo">
+                    <img src="img/logo-2.svg" alt="Смитлер - салон красоты" />
+                  </div>
+                  <h3 class="h3">Косметологический сервис</h3>
+                  <ul class="carousel-services-list">
+                    <li>
+                      Ключевая услуга #1 -
+                      <strong>8500 <i class="fa fa-rub"></i></strong>
+                    </li>
+
+                    <li>
+                      Ключевая услуга #2 -
+                      <strong>8500 <i class="fa fa-rub"></i></strong>
+                    </li>
+                    <li>
+                      Ключевая услуга #3 -
+                      <strong>8500 <i class="fa fa-rub"></i></strong>
+                    </li>
+                  </ul>
+                  <a href="#" class="button button-white">Список услуг</a>
+                </div>
+              </div>
+
+              <div
+                class="carousel-services-image"
+                style="background-image: url(img/service.png);"
+              ></div>
+            </div>
+            <!--  -->
+            <div class="carousel-services-item">
+              <div class="carousel-services-content">
+                <div class="carousel-services-composition">
+                  <div class="carousel-logo">
+                    <img src="img/logo-2.svg" alt="Смитлер - салон красоты" />
+                  </div>
+                  <h3 class="h3">Парикмахерский сервис</h3>
+                  <ul class="carousel-services-list">
+                    <li>
+                      Ключевая услуга #1 -
+                      <strong>8500 <i class="fa fa-rub"></i></strong>
+                    </li>
+                    <li>
+                      Ключевая услуга #2 -
+                      <strong>3600 <i class="fa fa-rub"></i></strong>
+                    </li>
+                    <li>
+                      Ключевая услуга #3 -
+                      <strong>9800 <i class="fa fa-rub"></i></strong>
+                    </li>
+                  </ul>
+                  <a href="#" class="button button-white">Список услуг</a>
+                </div>
+              </div>
+
+              <div
+                class="carousel-services-image"
+                style="background-image: url(img/service2.png);"
+              ></div>
+            </div>
+            <!--  -->
+            <div class="carousel-services-item">
+              <div class="carousel-services-content">
+                <div class="carousel-services-composition">
+                  <div class="carousel-logo">
+                    <img src="img/logo-2.svg" alt="Смитлер - салон красоты" />
+                  </div>
+                  <h3 class="h3">Маникюрный сервис</h3>
+                  <ul class="carousel-services-list">
+                    <li>
+                      Ключевая услуга #1 -
+                      <strong>8500 <i class="fa fa-rub"></i></strong>
+                    </li>
+                    <li>
+                      Ключевая услуга #2 -
+                      <strong>3600 <i class="fa fa-rub"></i></strong>
+                    </li>
+                    <li>
+                      Ключевая услуга #3 -
+                      <strong>9800 <i class="fa fa-rub"></i></strong>
+                    </li>
+                  </ul>
+                  <a href="#" class="button button-white">Список услуг</a>
+                </div>
+              </div>
+
+              <div
+                class="carousel-services-image"
+                style="background-image: url(img/service3.png);"
+              ></div>
+              <!--  -->
+            </div>
+            <!--  -->
+          </div>
+        </section>
+      </div>
       <div id="my-footer"></div>
     </div>
     <!-- build:js scripts/main.js -->
