--- a/app/index.html
+++ b/app/index.html
@@ -230,6 +230,36 @@
               <!--  -->
             </div>
             <!--  -->
+            <div class="carousel-services-item">
+              <div class="carousel-services-content">
+                <div class="carousel-services-composition">
+                  <div class="carousel-logo">
+                    <img src="img/logo-2.svg" alt="Смитлер - салон красоты" />
+                  </div>
+                  <h3 class="h3">Косметологический сервис</h3>
+                  <ul class="carousel-services-list">
+                    <li>
+                      Ключевая услуга #1 -
+                      <strong>8500 <i class="fa fa-rub"></i></strong>
+                    </li>
+                    <li>
+                      Ключевая услуга #2 -
+                      <strong>8500 <i class="fa fa-rub"></i></strong>
+                    </li>
+                    <li>
+                      Ключевая услуга #3 -
+                      <strong>8500 <i class="fa fa-rub"></i></strong>
+                    </li>
+                  </ul>
+                  <a href="#" class="button button-white">Список услуг</a>
+                </div>
+              </div>
+
+              <div
+                class="carousel-services-image"
+                style="background-image: url(img/service.png);"
+              ></div>
+            </div>
           </div>
         </section>
       </div>
