--- a/app/index.html
+++ b/app/index.html
@@ -32,6 +32,10 @@
   </head>
 
   <body class="is-home">
+    <div class="preloader">
+      <div class="pulse"></div>
+    </div>
+
     <div id="my-page">
       <div id="my-header">
         <header class="site-header">
@@ -262,9 +266,308 @@
             </div>
           </div>
         </section>
+
+        <section class="s-king inverse section-overlay">
+          <div class="container">
+            <div class="row">
+              <div class="col-md-5">
+                <h2 class="h2">Королевский салон</h2>
+                <p>
+                  <strong>S&Mitler</strong> встречает своих посетителей
+                  современным дизайном и атмосферой уюта: огромное светлое
+                  пространство, изящная мебель, мягкие бархатные кресла. Это
+                  отличное место для того, чтобы посвятить пару часов только
+                  себе !
+                </p>
+                <p>
+                  Дамам здесь предложат экстраординарный ассортимент
+                  косметологических процедур и качественный нейл-сервис, а
+                  мужчин порадуют услугами стилистов и уходом за лицом.
+                </p>
+              </div>
+              <div class="col-md-7">
+                <div
+                  class="section-gallry fotorama"
+                  data-nav="thumbs"
+                  data-thumbwidth="110.5"
+                  data-thumbheight="66"
+                  data-thumbborderwidth="4"
+                  data-thumbmargin="10"
+                  data-width="100%"
+                >
+                  <img
+                    src="img/photos/small/foto-13.jpg"
+                    alt="Фото салона красоты"
+                  />
+                  <img
+                    src="img/photos/small/foto-15.jpg"
+                    alt="Фото салона красоты"
+                  />
+                  <img
+                    src="img/photos/small/foto-16.jpg"
+                    alt="Фото салона красоты"
+                  />
+                  <img
+                    src="img/photos/small/foto-18.jpg"
+                    alt="Фото салона красоты"
+                  />
+                  <img
+                    src="img/photos/small/foto-19.jpg"
+                    alt="Фото салона красоты"
+                  />
+                  <img
+                    src="img/photos/small/foto-23.jpg"
+                    alt="Фото салона красоты"
+                  />
+                  <img
+                    src="img/photos/small/foto-13.jpg"
+                    alt="Фото салона красоты"
+                  />
+                  <img
+                    src="img/photos/small/foto-15.jpg"
+                    alt="Фото салона красоты"
+                  />
+                  <img
+                    src="img/photos/small/foto-16.jpg"
+                    alt="Фото салона красоты"
+                  />
+                </div>
+              </div>
+            </div>
+          </div>
+        </section>
+        <section class="s-call inverse">
+          <div class="container">
+            <div class="row">
+              <div class="col-md-5 col-md-offset-7 col-sm-6 col-sm-offset-6">
+                <form class="callback">
+                  <div class="success"><span>Спасибо за заявку !</span></div>
+
+                  <input type="hidden" name="project_name" value="SMITLER" />
+                  <input
+                    type="hidden"
+                    name="admin_email"
+                    value="admin@mail.com"
+                  />
+                  <input
+                    type="hidden"
+                    name="form_subject"
+                    value="Заявка с сайта SMITLER"
+                  />
+                  <input type="hidden" name="Страница" value="" />
+                  <div class="callback-logo">
+                    <img
+                      src="./img/logo-2.svg"
+                      alt="Смитлер - салон красоты в Москве"
+                    />
+                  </div>
+                  <div class="formhead h2">Оставить заявку</div>
+                  <p>Оставьте заявку и мы перезвоним вам в течении 15 минут.</p>
+
+                  <input
+                    type="text"
+                    name="Имя"
+                    placeholder="Ваше имя..."
+                    required
+                  />
+                  <input
+                    type="text"
+                    name="Телефон"
+                    placeholder="Ваш телефон..."
+                    required
+                  />
+                  <select name="Услуга">
+                    <option value disabled selected>Выбрать услугу...</option>
+                    <option>Парикмахерский сервис</option>
+                    <option>Косметологический сервис</option>
+                    <option>Маникюрный сервис</option>
+                    <option>Массаж и SPA</option>
+                    <option>Солярий</option>
+                  </select>
+                  <button class="button button-white">Отправить</button>
+                </form>
+              </div>
+            </div>
+          </div>
+        </section>
+
+        <section class="s-review inverse section-overlay">
+          <div class="container">
+            <div class="row">
+              <div class="col-sm-12">
+                <h2 class="h2 text-center h-first">Отзывы наших клиентов</h2>
+              </div>
+
+              <div class="col-sm-8 col-sm-offset-2">
+                <div class="quotes"></div>
+
+                <div class="owl-carousel reviews">
+                  <!--  -->
+                  <div class="review">
+                    <div class="review-header">Оксана</div>
+                    <div class="review-date">29.07.16 (Стрижка)</div>
+                    <div class="review-stars">
+                      <i class="fa fa-star"></i><i class="fa fa-star"></i
+                      ><i class="fa fa-star"></i><i class="fa fa-star"></i
+                      ><i class="fa fa-star"></i>
+                    </div>
+                    <div class="review-text">
+                      Далеко-далеко за словесными горами, в стране гласных и
+                      согласных живут рыбные тексты. Коварный переписывается
+                      снова вскоре родного буквоград эта рукописи маленькая.
+                      Даже.
+                    </div>
+                    <!--  -->
+                  </div>
+                  <!--  -->
+                  <div class="review">
+                    <div class="review-header">Александра</div>
+                    <div class="review-date">29.08.16 (Маникюр)</div>
+                    <div class="review-stars">
+                      <i class="fa fa-star"></i><i class="fa fa-star"></i
+                      ><i class="fa fa-star"></i><i class="fa fa-star"></i
+                      ><i class="fa fa-star"></i>
+                    </div>
+                    <div class="review-text">
+                      Далеко-далеко за словесными горами, в стране гласных и
+                      согласных живут рыбные тексты. Коварный переписывается
+                      снова вскоре родного буквоград эта рукописи маленькая.
+                      Даже. Далеко-далеко за словесными горами в стране.
+                    </div>
+                    <!--  -->
+                  </div>
+                  <!--  -->
+                  <div class="review">
+                    <div class="review-header">Максим</div>
+                    <div class="review-date">28.07.16 (Стрижка)</div>
+                    <div class="review-stars">
+                      <i class="fa fa-star"></i><i class="fa fa-star"></i
+                      ><i class="fa fa-star"></i><i class="fa fa-star"></i
+                      ><i class="fa fa-star"></i>
+                    </div>
+                    <div class="review-text">
+                      Далеко-далеко за словесными горами, в стране гласных и
+                      согласных живут рыбные тексты. Коварный переписывается
+                      снова вскоре родного буквоград эта рукописи маленькая.
+                      Даже. Далеко-далеко за словесными горами, в стране гласных
+                      и согласных живут рыбные тексты.
+                    </div>
+                  </div>
+                  <!--  -->
+                </div>
+              </div>
+            </div>
+          </div>
+        </section>
+
+        <section class="s-partners section-overlay">
+          <div class="container">
+            <div class="row">
+              <div class="col-sm-12">
+                <h2 class="h2 text-center">Наши партнёры</h2>
+              </div>
+              <div class="col-sm-10 col-sm-offset-1">
+                <div class="owl-carousel partners">
+                  <div class="partner">
+                    <img src="./img/partners/brend1.png" alt="Партнёр" />
+                  </div>
+                  <div class="partner">
+                    <img src="./img/partners/brend2.png" alt="Партнёр" />
+                  </div>
+                  <div class="partner">
+                    <img src="./img/partners/brend3.png" alt="Партнёр" />
+                  </div>
+                  <div class="partner">
+                    <img src="./img/partners/brend4.png" alt="Партнёр" />
+                  </div>
+                </div>
+              </div>
+            </div>
+          </div>
+        </section>
       </div>
-      <div id="my-footer"></div>
+      <div id="my-footer">
+        <div class="main-footer">
+          <div class="container">
+            <div class="row">
+              <div class="col-lg-2 col-sm-4 col-xs-12">
+                <div class="footer-column">
+                  <img
+                    src="/img/logo-1.svg"
+                    alt="Салон красоты"
+                    class="logo-footer"
+                  />
+                  <p>Салон красоты <br />бизнес-класса в Москве</p>
+                  <div class="social-footer">
+                    <nav class="soc">
+                      <ul>
+                        <li>
+                          <a href="#"><i class="fa fa-facebook"></i></a>
+                        </li>
+                        <li>
+                          <a href="#"><i class="fa fa-instagram"></i></a>
+                        </li>
+                        <li>
+                          <a href="#"><i class="fa fa-vk"></i></a>
+                        </li>
+                      </ul>
+                    </nav>
+                  </div>
+                </div>
+              </div>
+              <div class="col-lg-3 col-sm-4 col-xs-12">
+                <div class="footer-column">
+                  <nav class="footer-menu">
+                    <ul>
+                      <li class="active">
+                        <a href="#">Парикмахерский сервис</a>
+                      </li>
+                      <li><a href="#">Косметологический сервис</a></li>
+                      <li><a href="#">Маникюрный сервис</a></li>
+                      <li><a href="#">Массаж и SPA</a></li>
+                      <li><a href="#">Солярий</a></li>
+                      <li><a href="#">Наши специалисты</a></li>
+                    </ul>
+                  </nav>
+                </div>
+              </div>
+              <div class="col-lg-3 col-sm-4 col-xs-12">
+                <div class="footer-column">
+                  <p class="footer-addr">
+                    <i class="fa fa-location-arrow"></i>г. Москва, ул. Ивана
+                    Бабушкина, 22с1 / м. Профсоюзная
+                  </p>
+                  <p class="footer-addr">
+                    <i class="fa fa-clock-o"></i>Время работы: Ежедневно,
+                    <br />10:00 - 22:00
+                  </p>
+                  <p class="footer-addr">
+                    <span class="footer-phone"
+                      ><i class="fa fa-mobile"></i>+7 (495) 922-77-73</span
+                    >
+                  </p>
+                </div>
+              </div>
+              <div class="col-lg-4 col-sm-12 col-xs-12">
+                <div class="footer-column">
+                  <div class="map">
+                    <script
+                      type="text/javascript"
+                      charset="utf-8"
+                      async
+                      src="https://api-maps.yandex.ru/services/constructor/1.0/js/?um=constructor%3A33ca8a2bc79d0882e2f7575379579ac754f46a55d47561f0817166fc0cb8e45d&amp;width=100%&amp;height=200&amp;lang=ru_RU&amp;scroll=true"
+                    ></script>
+                  </div>
+                </div>
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
     </div>
+
+    <div class="top" title="Наверх"><i class="fa fa-angle-double-up"></i></div>
+
     <!-- build:js scripts/main.js -->
     <script src="js/scripts.min.js"></script>
     <!-- endbuild -->
